[gd_scene load_steps=16 format=2]

[ext_resource path="res://Assets/Loot/Weapons/axe.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Equipment/Weapons/Melee/axe/Axe.gd" type="Script" id=2]
[ext_resource path="res://Assets/Effects/90deg_swoosh.png" type="Texture" id=3]

[sub_resource type="Gradient" id=1]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="Curve" id=3]
max_value = 200.0
_data = [ Vector2( 0, 166.818 ), 0.0, 0.0, 0, 0, Vector2( 1, 50.4545 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="Curve" id=5]
max_value = 3.0
_data = [ Vector2( 0, 3 ), 0.0, 0.0, 0, 0, Vector2( 1, 1.025 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=6]
curve = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=7]
emission_shape = 2
emission_box_extents = Vector3( 1, 4, 1 )
flag_disable_z = true
gravity = Vector3( 0, 30, 0 )
initial_velocity = -50.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel_curve = SubResource( 4 )
radial_accel_random = 1.0
damping = 100.0
scale_curve = SubResource( 6 )
color_ramp = SubResource( 2 )

[sub_resource type="CapsuleShape2D" id=8]
radius = 4.95736
height = 3.61135

[sub_resource type="Animation" id=9]
resource_name = "Attack"
length = 0.6
step = 0.025
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 0.598346 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -2.183, -0.25, 0, 0.25, 0, 2.737, -0.25, 0, 0.05, 0.0223789, 0, -0.048346, 0.0174222, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 0.598346 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 130, -0.25, 0, 0.075, 0, 127.645, -0.25, 0, 0.05, -22.8, 0, -0.098346, -0.110823, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3, 0.5, 0.598346 )
}
tracks/3/type = "value"
tracks/3/path = NodePath("AttackCollision:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.025, 0.414475 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("SwooshSprite:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2, 0.325 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/5/type = "method"
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "play_swoosh"
} ]
}

[sub_resource type="Animation" id=10]
resource_name = "Jump back"
length = 0.4
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, -49.0548, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.1, -50, 0, -0.1, -40, 0.05, 0 ),
"times": PoolRealArray( 0, 0.4 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 460, -0.05, 0, 0.302788, -229.731, 0, -0.082, 0, 0.05, 0 ),
"times": PoolRealArray( 0, 0.4 )
}

[sub_resource type="Animation" id=11]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "value"
tracks/3/path = NodePath("AttackCollision:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("SwooshSprite:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("WeaponSprite/ImpactParticles:emitting")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=12]
length = 0.7
step = 0.05
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 200, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.7 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.7 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1180, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.7 )
}
tracks/3/type = "value"
tracks/3/path = NodePath("WeaponSprite/ImpactParticles:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.650868, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}

[node name="Axe" type="Area2D"]
position = Vector2( 200, 0 )
rotation = 20.5949
collision_mask = 4
script = ExtResource( 2 )

[node name="SwooshSprite" type="Sprite" parent="."]
visible = false
position = Vector2( -16.3342, -14.5888 )
rotation = -1.54998
scale = Vector2( 0.333, 0.5 )
texture = ExtResource( 3 )

[node name="WeaponSprite" type="Sprite" parent="."]
light_mask = 2
position = Vector2( 1.2, -13 )
scale = Vector2( 1.25, 1.25 )
texture = ExtResource( 1 )

[node name="ImpactParticles" type="Particles2D" parent="WeaponSprite"]
position = Vector2( 4.50676, -4.09259 )
emitting = false
amount = 128
speed_scale = 7.72
local_coords = false
process_material = SubResource( 7 )

[node name="AttackCollision" type="CollisionShape2D" parent="."]
position = Vector2( 0.787449, -17.8822 )
rotation = 1.5708
scale = Vector2( 1.25, 1.25 )
shape = SubResource( 8 )
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_process_mode = 0
anims/Attack = SubResource( 9 )
"anims/Jump back" = SubResource( 10 )
anims/RESET = SubResource( 11 )
anims/Throw = SubResource( 12 )

[node name="Range" type="RayCast2D" parent="."]
cast_to = Vector2( 200, 0 )

[connection signal="body_entered" from="." to="." method="_on_Axe_body_entered"]
